# leiden_paper

./: .gitignore  LICENSE  README.md  high-ld-hg19-regions.txt  population_structure_pipeline.py  pyproject.toml  slurm-submit.sh  updates.md
genotype_simulation/: gcta_trait_simulations.py  human_sims.ipynb  simulate_genotypes.py  vcf_to_plink.py
pca_adjustment/: README  correct_phenotypes_pca_popstruct.py  phenotype_pc_regression.R  pruned_pca.py
simulations/: correct_traits_pca.R  correct_traits_pca.py  plot_qq_ggplot.R  plot_qq_plot_with_offset.R  plot_qq_plot_with_offset.py  plot_qqplot.py  run_plink_gwas.py  simulate_genotypes.py  simulate_traits.py  vcf_to_plink.py
